// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type Password renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj ejLjyl"
    disabled={true}
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm brTlWD"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj ejLjyl"
    disabled={true}
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm iXvpNw"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj ejLjyl"
    disabled={true}
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm fhxQnS"
        disabled={true}
        placeholder=" "
        type="password"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm kEOemN"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB fEGrYJ"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm hXwquy"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB fEGrYJ"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm bExaqQ"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB fEGrYJ"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm brTlWD"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm iXvpNw"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm fhxQnS"
        placeholder=" "
        readOnly={true}
        type="password"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm brTlWD"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm iXvpNw"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm fhxQnS"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm brTlWD"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm iXvpNw"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm fhxQnS"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
      dir="rtl"
    >
      medium
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm brTlWD"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx jauToI"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
      dir="rtl"
    >
      large
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm iXvpNw"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx jauToI"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm fhxQnS"
        dir="rtl"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-hhICeM cryZUP"
      >
        xlarge
      </label>
      <div
        className="sc-eqKtKx jauToI"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm brTlWD"
        placeholder="medium"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm iXvpNw"
        placeholder="large"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm cpzsJT"
        placeholder="xlarge"
        type="password"
      />
      <label
        className="sc-hhICeM dxUkQc"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
  </div>
</div>
`;

exports[`TextInput: type Password supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm jzfQmo"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <div
      className="sc-eZkcaX hJCPkp"
    >
      <input
        className="sc-hQikvm bKHQRf"
        placeholder="Placeholder"
        type="password"
      />
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX huZTyb"
    >
      <input
        className="sc-hQikvm fhxQnS"
        placeholder="Placeholder"
        type="password"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
      <div
        className="sc-eqKtKx kvrkgz"
        onClick={[Function]}
      >
        Show
      </div>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
